# mini_rover_model

./: CMakeLists.txt  package.xml  urdf.rviz
launch/: rviz_model.launch
meshes/: New_MiniRover_cutoff.dae  arm.dae  arm1.dae  body_CUT.dae  minirover trimmedbody.dae  wheel.dae  wheel1.dae  wheel_big.dae
urdf/: rover_UT.xacro  rover_UT1.xacro  rover_UT2.xacro  rover_UT3.xacro
