<?xml version="1.0"?>
<package format="2">
  <name>rover_model</name>
  <version>0.1.0</version>
  <description>
      mini_rover for inspection
  </description>

  <author>Shervin Tashakori</author>
  <maintainer email="stashako@fiu.edu">Shervin Tashakori</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend> 
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
